apps/media/kavita/deployment.yaml
#
# Reference:
# https://docs.linuxserver.io/images/docker-kavita/#application-setup
#

apiVersion: v1
kind: Service
metadata:
  name: kavita
  namespace: media
  labels:
    app.kubernetes.io/component: service
    app.kubernetes.io/name: kavita
spec:
  selector:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: kavita
  type: ClusterIP
  ports:
    - name: http
      port: 5000
      protocol: TCP
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
  namespace: media
  labels:
    app.kubernetes.io/component: app
    app.kubernetes.io/name: kavita
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: app
      app.kubernetes.io/name: kavita
  template:
    metadata:
      labels:
        app.kubernetes.io/component: app
        app.kubernetes.io/name: kavita
    spec:
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/hostname: sheol
      containers:
        - name: kavita
          image: ghcr.io/linuxserver/kavita:0.9.1 # {"$imagepolicy": "media:kavita"}
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 350Mi
              # limits:
              #   cpu: 1500m
              #   memory: 1500Mi
          volumeMounts:
            - name: kavita-pvc
              mountPath: /config
            - name: media-data-pvc
              mountPath: /data
      volumes:
        - name: kavita-pvc
          persistentVolumeClaim:
            claimName: kavita-pvc
        - name: media-data-pvc
          persistentVolumeClaim:
            claimName: media-data-pvc
