apps/media/kavita/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kavita-dashboard-https
  namespace: media
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: kavita
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kavita.powell.place`)
      middlewares:
        - name: security
          namespace: kube-system
      services:
        - name: kavita
          port: http
